syntax = "proto3";

package example.simple;

option go_package = "github.com/vinay03/protocol-buffers/proto";

message Simple {
	uint32 id = 1;
	bool is_simple = 2;
	string  name = 3;
	repeated int32 simple_lists = 4;
}